# antigravity-brain

./: .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md  brain.bat  brain.ps1  brain_viewer.html  install.ps1  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
assets/css/: style.css
assets/js/: script.js
prompts/: AGENT_PROMPT.md  NEW_FEATURE.md  REFACTOR.md  SECURITY_REVIEW.md
src/: brain_scan.py
