[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "antigravity-brain"
version         = "2.0.0"
description     = "Knowledge graph for Antigravity IDE — powered by Gemini AI"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.8"
dependencies    = ["google-genai>=0.3.0"]

[project.scripts]
brain = "src.brain_scan:main"

[tool.ruff]
line-length    = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
